@@ -1,0 +1,35 @@
+#
+# Check that switching to an existing user does nothing
+#
+
+[SeatDefaults]
+autologin-user=alice
+
+#?RUNNER DAEMON-START
+#?*WAIT
+
+# X server starts
+#?XSERVER :50 START
+#?XSERVER :50 INDICATE-READY
+
+# LightDM connects to X server
+#?XSERVER :50 ACCEPT-CONNECT
+
+# Session starts
+#?SESSION START USER=alice
+#?XSERVER :50 ACCEPT-CONNECT
+#?SESSION CONNECT-XSERVER
+
+# Switch to Alice's account
+#?*SWITCH-TO-USER USERNAME=alice
+#?RUNNER SWITCH-TO-USER USERNAME=alice
+
+# Nothing happends
+#?*WAIT 1
+
+# Cleanup
+#?*STOP-DAEMON
+# Don't know what order they will terminate
+#?(XSERVER :50 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15)
+#?(XSERVER :50 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15)
+#?RUNNER DAEMON-EXIT STATUS=0
