@@ -1,0 +1,46 @@
+#
+# Check that switching to a user without a password doesn't show a greeter
+#
+
+[SeatDefaults]
+autologin-user=alice
+
+#?RUNNER DAEMON-START
+#?*WAIT
+
+# X server starts
+#?XSERVER :50 START
+#?XSERVER :50 INDICATE-READY
+
+# LightDM connects to X server
+#?XSERVER :50 ACCEPT-CONNECT
+
+# Session starts
+#?SESSION START USER=alice
+#?XSERVER :50 ACCEPT-CONNECT
+#?SESSION CONNECT-XSERVER
+
+# Switch to Bob's account
+#?*SWITCH-TO-USER USERNAME=bob
+#?RUNNER SWITCH-TO-USER USERNAME=bob
+
+# New X server starts
+#?XSERVER :51 START
+#?XSERVER :51 INDICATE-READY
+
+# LightDM connects to X server
+#?XSERVER :51 ACCEPT-CONNECT
+
+# New session starts
+#?SESSION START USER=bob
+#?XSERVER :51 ACCEPT-CONNECT
+#?SESSION CONNECT-XSERVER
+
+# Cleanup
+#?*STOP-DAEMON
+# Don't know what order they will terminate
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15)
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15)
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15)
+#?(SESSION TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15)
+#?RUNNER DAEMON-EXIT STATUS=0
