@@ -1,6 +1,9 @@
 #
-# Check that a logged in session can be switched to via the D-Bus interface.
+# Check that switching to a user shows the greeter
 #
+
+[SeatDefaults]
+autologin-user=bob
 
 #?RUNNER DAEMON-START
 #?*WAIT
@@ -12,12 +15,10 @@
 # LightDM connects to X server
 #?XSERVER :50 ACCEPT-CONNECT
 
-# Greeter starts
-#?GREETER START
+# Session starts
+#?SESSION START USER=bob
 #?XSERVER :50 ACCEPT-CONNECT
-#?GREETER CONNECT-XSERVER :50
-#?GREETER CONNECT-TO-DAEMON
-#?GREETER CONNECTED-TO-DAEMON
+#?SESSION CONNECT-XSERVER
 
 # Switch to Alice's account
 #?*SWITCH-TO-USER USERNAME=alice
@@ -30,22 +31,22 @@
 # LightDM connects to X server
 #?XSERVER :51 ACCEPT-CONNECT
 
-# Existing X server stops, new greeter starts
+# Greeter starts
+#?GREETER START
+#?XSERVER :51 ACCEPT-CONNECT
+#?GREETER CONNECT-XSERVER :51
+#?GREETER CONNECT-TO-DAEMON
+#?GREETER CONNECTED-TO-DAEMON
+
 # Alice is automatically selected
-# FIXME: Need to make parallel tests...
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
-#?(XSERVER :50 TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15|GREETER START|GREETER CONNECT-XSERVER :51|XSERVER :51 ACCEPT-CONNECT|GREETER CONNECT-TO-DAEMON|GREETER CONNECTED-TO-DAEMON|GREETER AUTHENTICATE-SELECTED USERNAME=alice|GREETER SHOW-PROMPT TEXT="Password:")
+#?GREETER AUTHENTICATE-SELECTED USERNAME=alice
+#?GREETER SHOW-PROMPT TEXT="Password:"
 
 # Cleanup
 #?*STOP-DAEMON
 # Don't know what order they will terminate
-#?(GREETER TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15)
-#?(GREETER TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15)
+#?(XSERVER :50 TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15)
+#?(XSERVER :50 TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15)
+#?(XSERVER :50 TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15)
+#?(XSERVER :50 TERMINATE SIGNAL=15|XSERVER :51 TERMINATE SIGNAL=15|SESSION TERMINATE SIGNAL=15|GREETER TERMINATE SIGNAL=15)
 #?RUNNER DAEMON-EXIT STATUS=0
